
    Features added

      - added 'fast_listen' directive to http-server and webdav-source-server
        sections in etc/zope.conf in order to defer the opening of the sockets
        until the late startup phase. This in in particular useful when running
        Zope behind a loadbalancer (patch by Patrick Gerken).

    Bugs Fixed

      - Collector #2208: rewriting/setting the 'charset' part of the content-type
        HTTP header will be done only for 'text/*'

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

      - reStructuredText/ZReST: setting raw_enabled to 0 for security
        reasons

      - Collector #2113: 'zopectl test' masked Ctrl-C.

      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - Collector #2122: fixed missing is_proxying_match definition
        in ZServer/HTTPServer

      - Collector #2077: fixed problem with ACTUAL_URL and SiteRoot

      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership

      - Collector #2063: cleaned up some mess in MailHost.sendTemplate()

      - View and attribute lookup order was changed to the following:
           1. Unacquired attributes
           2. Views
           3. Acquired attributes
        According to consensus in z3-five mailing list:
        http://codespeak.net/pipermail/z3-five/2006q2/001474.html
        
      - The defaultView directive now only looks up views, not attributes.

    Other Changes

      - Disabled docutils file inclusion completely, rather than trying